@@ -1,4 +1,4 @@
-#ifdef _MSC_VER
+﻿#ifdef _MSC_VER
 #pragma setlocale("C")
 #endif
 // DockCtrl.cpp
@@ -181,7 +181,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Сохранить размещение")
 srSP("")
 trTR("Pencere Düzeni ekle")
 
@@ -293,7 +293,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Вы должны ввести имя для нового размещения")
 srSP("")
 trTR("Yeni pencere düzeni için bir isim girmelisiniz")
 
@@ -307,7 +307,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Размещение '%s' уже существует. Переписать?")
 srSP("")
 trTR("'%s' adında pencere düzeni mevcut. Üzerine yazmak ister misiniz?")
 
@@ -321,7 +321,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Удалить размещение '%s' ?")
 srSP("")
 trTR("'%s' adlı pencere düzenini gerçekten silmek istiyor musunuz?")
 
@@ -582,7 +582,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Добавить")
 srSP("")
 trTR("Ekle")
 
@@ -699,7 +699,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Настройки размещения")
 srSP("")
 trTR("Pencere Düzeni Seçenekleri")
 
@@ -713,7 +713,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Удалить")
 srSP("")
 trTR("Sil")
 
@@ -755,7 +755,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Имя размещения:")
 srSP("")
 trTR("Pencere düzeni ismi:")
 
