@@ -99,4 +99,10 @@ Recent revisions are added to the current versions logs under date/time info.
 	+ added HotKey support for Settings window (default is CTRL + HOME).
 	+ added methods to control forbid/permit on window sides.
 	- numerous bugfixes, and improvements.
+
+3/22/2008
+	+ double clicking on a dragbar of a authidden dockwindow will cause it go into docked state.
+	+ added "stdsize" variable to the PaneFrame class.
+	+ added ShowXXXXPane() (X:left/top/right/bottom) public methods to the Dockbase class. 
+	 
 	
